# agentic-discord

./: .claudeignore  .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.test  README.md  agent_config.py  dashboard.py  debug_context.py  pyproject.toml  requirements.txt  run_all.py  run_bot.py
.claude/: CLAUDE.md
.githooks/: pre-commit
.github/workflows/: ci.yml
agent_cogs/: anthropic_agent.py  base.py  gemini_agent.py  grok_agent.py  openai_agent.py
agent_coordinator/: __init__.py  __main__.py  config.py  coordinator.py  engine.py  scheduler.py
tests/: test_agent_cog.py  test_coordinator.py  test_recent_changes_pytest.py
