[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-discord"
version = "1.0.0"
description = "Orchestrated LLM discourse with Claude, Gemini, Grok, and ChatGPT, all on Discord"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
  "aiohttp~=3.9",
  "anthropic~=0.86",
  "google-genai~=1.68",
  "httpx~=0.28",
  "openai~=2.29",
  "py-cord~=2.7",
  "python-dotenv~=1.0",
  "redis[hiredis]~=7.3",
  # Keep these direct pins to avoid requests stack warnings in provider SDK combos.
  "charset-normalizer~=3.4",
  "urllib3~=2.6",
]

[project.optional-dependencies]
dev = [
  "pyright~=1.1",
  "pytest~=9.0",
  "pytest-asyncio~=1.3",
  "ruff~=0.15",
]

[project.urls]
Repository = "https://github.com/jdmsharpe/agentic-discord"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort (import sorting)
  "UP",  # pyupgrade (modern Python syntax)
  "B",   # flake8-bugbear (common bugs)
  "SIM", # flake8-simplify
]
ignore = [
  "E501", # line too long (formatter handles this)
]

[tool.ruff.format]
quote-style = "double"

[tool.pyright]
include = ["agent_cogs", "agent_coordinator", "tests"]
exclude = [".venv", "**/node_modules", "**/__pycache__", "**/.*"]
extraPaths = ["."]
venvPath = "."
venv = ".venv"

[[tool.pyright.executionEnvironments]]
root = "tests"
extraPaths = ["."]
reportAttributeAccessIssue = false
reportOptionalMemberAccess = false

[tool.setuptools]
py-modules = ["agent_config", "dashboard", "debug_context", "run_all", "run_bot"]

[tool.setuptools.packages.find]
include = ["agent_cogs*", "agent_coordinator*"]
exclude = ["tests*"]
